--- a/RPS/login/login.css
+++ b/RPS/login/login.css
@@ -1,21 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-*
-{
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
-body 
-{
+body {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   background: #000;
 }
-section 
-{
+section {
   position: absolute;
   width: 100vw;
   height: 100vh;
@@ -27,33 +24,27 @@ section
   overflow: hidden;
 }
 
-  .hide {
-visibility: hidden;
-  }
+.hide {
+  visibility: hidden;
+}
 
-
-section::before 
-{
-  content: '';
+section::before {
+  content: "";
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(#000,#f00,#000);
+  background: linear-gradient(#000, #f00, #000);
   animation: animate 5s linear infinite;
 }
-@keyframes animate 
-{
-  0%
-  {
+@keyframes animate {
+  0% {
     transform: translateY(-100%);
   }
-  100%
-  {
+  100% {
     transform: translateY(100%);
   }
 }
-section span 
-{
+section span {
   position: relative;
   display: block;
   width: calc(6.25vw - 2px);
@@ -62,27 +53,24 @@ section span
   z-index: 2;
   transition: 1.5s;
 }
-section span:hover 
-{
+section span:hover {
   background: #f00;
   transition: 0s;
 }
 
-section .signin
-{
+section .signin {
   position: absolute;
   width: 400px;
-  background: #222;  
+  background: #222;
   z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 40px;
   border-radius: 4px;
-  box-shadow: 0 15px 35px rgba(0,0,0,9);
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 9);
 }
-section .signin .content 
-{
+section .signin .content {
   position: relative;
   width: 100%;
   display: flex;
@@ -91,26 +79,22 @@ section .signin .content
   flex-direction: column;
   gap: 40px;
 }
-section .signin .content h2 
-{
+section .signin .content h2 {
   font-size: 2em;
   color: #f00;
   text-transform: uppercase;
 }
-section .signin .content .form 
-{
+section .signin .content .form {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 25px;
 }
-section .signin .content .form .inputBox
-{
+section .signin .content .form .inputBox {
   position: relative;
   width: 100%;
 }
-section .signin .content .form .inputBox input 
-{
+section .signin .content .form .inputBox input {
   position: relative;
   width: 100%;
   background: #333;
@@ -122,8 +106,7 @@ section .signin .content .form .inputBox input
   font-weight: 500;
   font-size: 1em;
 }
-section .signin .content .form .inputBox i 
-{
+section .signin .content .form .inputBox i {
   position: absolute;
   left: 0;
   padding: 15px 10px;
@@ -133,31 +116,26 @@ section .signin .content .form .inputBox i
   pointer-events: none;
 }
 .signin .content .form .inputBox input:focus ~ i,
-.signin .content .form .inputBox input:valid ~ i
-{
+.signin .content .form .inputBox input:valid ~ i {
   transform: translateY(-7.5px);
   font-size: 0.8em;
   color: #fff;
 }
-.signin .content .form .links 
-{
+.signin .content .form .links {
   position: relative;
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
-.signin .content .form .links a 
-{
+.signin .content .form .links a {
   color: #fff;
   text-decoration: none;
 }
-.signin .content .form .links a:nth-child(2)
-{
+.signin .content .form .links a:nth-child(2) {
   color: #f00;
   font-weight: 600;
 }
-.signin .content .form .inputBox input[type="submit"]
-{
+.signin .content .form .inputBox input[type="submit"] {
   padding: 10px;
   background: #f00;
   color: #000;
@@ -166,22 +144,17 @@ section .signin .content .form .inputBox i
   letter-spacing: 0.05em;
   cursor: pointer;
 }
-input[type="submit"]:active
-{
+input[type="submit"]:active {
   opacity: 0.6;
 }
-@media (max-width: 900px)
-{
-  section span 
-  {
+@media (max-width: 900px) {
+  section span {
     width: calc(10vw - 2px);
     height: calc(10vw - 2px);
   }
 }
-@media (max-width: 600px)
-{
-  section span 
-  {
+@media (max-width: 600px) {
+  section span {
     width: calc(20vw - 2px);
     height: calc(20vw - 2px);
   }
