--- a/RPS/start/index.css
+++ b/RPS/start/index.css
@@ -6,7 +6,6 @@
   font-family: "Source Code Pro", monospace;
   margin: 0px;
   padding: 0px;
-  
 }
 
 body {
@@ -40,16 +39,15 @@ body {
   top: -50%;
   transition: 1s top ease-out;
 }
-.name{
-  display:flex;
-  flex-direction:column;
+.name {
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  top:75%;
-  left:80%;
+  top: 75%;
+  left: 80%;
   font-size: 150%;
-  font-family: 'Open Sans', sans-serif;
-
+  font-family: "Open Sans", sans-serif;
 }
-.name span{
-  margin-top:5%;
+.name span {
+  margin-top: 5%;
 }
